# rustadmin

./: Cargo.toml  README.md  config.toml
config/: Cargo.toml
config/src/: lib.rs
controller/: Cargo.toml
controller/src/: lib.rs
controller/src/api/: article.rs  mod.rs  user.rs
dbs/: Cargo.toml
dbs/src/: lib.rs
dbs/src/mysqlx/: mod.rs
dbs/src/mysqlx/entities/: bakery.rs  mod.rs  prelude.rs
dbs/src/mysqlx/migrator/: m20220602_000001_create_bakery_table.rs  mod.rs
global/: Cargo.toml
global/src/: lib.rs
logx/: Cargo.toml
logx/src/: lib.rs
middleware/: Cargo.toml
middleware/src/: auth.rs  example.rs  lib.rs
serverx/: Cargo.toml
serverx/src/: httpx.rs  lib.rs
