[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
global = {path="../global"}
serverx = {path="../serverx"}
middleware = {path="../middleware"}
dbs = {path="../dbs"}
tracing = "0.1.41"
logx = {path="../logx"}
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.3",features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde_json = "1.0"